--- a/app/src/main/res/layout/item_user_sc.xml
+++ b/app/src/main/res/layout/item_user_sc.xml
@@ -5,14 +5,13 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dp_10"
     android:orientation="vertical">
-
     <com.jxkj.fit_5a.conpoment.view.RoundImageView
         android:id="@+id/iv_head_img"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
         android:layout_margin="@dimen/dp_10"
         android:src="@mipmap/ic_6"
-        app:type="round" />
+        app:type="circle" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -30,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/iv_head_img"
         android:layout_toEndOf="@id/iv_head_img"
-        android:text="12秒前      | 来自#经验#"
+        android:text="2002-15-16"
         android:textColor="@color/color_999999"
         android:textSize="12sp" />
 
@@ -137,12 +136,26 @@
             android:src="@mipmap/ic_7"
             android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/siv_4"
+        <RelativeLayout
+            android:id="@+id/rv_img_1"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_220dp"
-            android:scaleType="center"
-            android:src="@mipmap/ic_16" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/siv_4"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_220dp"
+                android:scaleType="center"
+                android:src="@mipmap/ic_7" />
+
+            <ImageView
+                android:id="@+id/iv_baofang"
+                android:layout_width="@dimen/dimen_45dp"
+                android:layout_height="@dimen/dimen_45dp"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:src="@drawable/ic_baofang" />
+        </RelativeLayout>
 
     </LinearLayout>
 
