--- a/app/src/main/res/layout/item_mine_yhq_sc.xml
+++ b/app/src/main/res/layout/item_mine_yhq_sc.xml
@@ -86,7 +86,7 @@
             android:layout_marginEnd="@dimen/dp_40"
             android:background="@drawable/btn_shape_bj_theme_2"
             android:gravity="center"
-            android:text="立即领取"
+            android:text="选择"
             android:textColor="@color/color_ffffff"
             android:textSize="10sp" />
 
