--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -167,6 +167,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="10dp">
+                <TextView
+                    android:id="@+id/tv_order_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_10"
+                    android:text="商品信息："
+                    android:textColor="@color/color_text_theme"
+                    android:textSize="@dimen/sp_14" />
 
                 <TextView
                     android:id="@+id/tv_order_1"
@@ -187,20 +195,11 @@
                     android:textSize="@dimen/sp_14" />
 
                 <TextView
-                    android:id="@+id/tv_order_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dp_10"
-                    android:text="支付宝交易号：251449491936555452"
-                    android:textColor="#A8A8A8"
-                    android:textSize="@dimen/sp_14" />
-
-                <TextView
                     android:id="@+id/tv_order_4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_10"
-                    android:text="下单时间：2020-04-09 17:25:21"
+                    android:text="下单时间："
                     android:textColor="#A8A8A8"
                     android:textSize="@dimen/sp_14" />
 
@@ -209,7 +208,45 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_10"
-                    android:text="发货时间：2020-04-09 18:25:21"
+                    android:visibility="gone"
+                    android:text="支付时间："
+                    android:textColor="#A8A8A8"
+                    android:textSize="@dimen/sp_14" />
+
+                <TextView
+                    android:id="@+id/tv_order_6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_10"
+                    android:visibility="gone"
+                    android:text="发货时间："
+                    android:textColor="#A8A8A8"
+                    android:textSize="@dimen/sp_14" />
+                <TextView
+                    android:id="@+id/tv_order_7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_10"
+                    android:visibility="gone"
+                    android:text="关闭时间："
+                    android:textColor="#A8A8A8"
+                    android:textSize="@dimen/sp_14" />
+                <TextView
+                    android:id="@+id/tv_order_8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_10"
+                    android:visibility="gone"
+                    android:text="完成时间："
+                    android:textColor="#A8A8A8"
+                    android:textSize="@dimen/sp_14" />
+                <TextView
+                    android:id="@+id/tv_order_9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_10"
+                    android:visibility="gone"
+                    android:text="过期时间："
                     android:textColor="#A8A8A8"
                     android:textSize="@dimen/sp_14" />
 
