--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -287,6 +287,7 @@
                         android:src="@drawable/icon_login_xl" />
 
                     <ImageView
+                        android:id="@+id/iv_iconsole"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/dp_10"
