--- a/app/src/main/res/layout/item_home_commodity.xml
+++ b/app/src/main/res/layout/item_home_commodity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_content"
-    android:layout_width="160dp"
+    android:layout_width="130dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/dimen_15dp"
     android:layout_marginTop="@dimen/dp_10"
@@ -12,11 +12,12 @@
 
     <ImageView
         android:id="@+id/iv_shop_pic"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:background="@drawable/bj_circle_f2_5"
-        android:scaleType="center"
-        android:src="@mipmap/ic_5" />
+        android:padding="@dimen/dp_10"
+        android:scaleType="fitXY"
+        android:src="@mipmap/icon_app_logo" />
 
 
     <TextView
@@ -25,17 +26,27 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:padding="@dimen/dp_10"
+        android:paddingTop="@dimen/dp_10"
         android:singleLine="true"
         android:text="XXXX运动手环积分专..."
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/dimen_14dp" />
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tv_shop_titlef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/dimen_3dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:minLines="2"
+        android:text=""
+        android:textColor="@color/color_666666"
+        android:textSize="12sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dimen_3dp"
-        android:layout_marginTop="@dimen/dimen_5dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
