--- a/app/src/main/res/layout/activity_set_user_sg.xml
+++ b/app/src/main/res/layout/activity_set_user_sg.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_30dp"
-            android:layout_marginTop="@dimen/dimen_60dp"
+            android:layout_marginTop="@dimen/dp_40"
             android:text="你的身高"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -71,6 +71,7 @@
                 android:src="@drawable/icon_sg_shu" />
 
             <ImageView
+                android:id="@+id/iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -94,7 +95,7 @@
             <ImageView
                 android:id="@+id/iv_xb"
                 android:layout_width="wrap_content"
-                android:layout_height="170dp"
+                android:layout_height="140dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:rotation="-90"
