--- a/app/src/main/res/layout/activity_mine_info.xml
+++ b/app/src/main/res/layout/activity_mine_info.xml
@@ -15,7 +15,6 @@
             android:id="@+id/iv_backImg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
             android:src="@mipmap/ic_mine_top"
             android:visibility="invisible" />
 
@@ -82,6 +81,7 @@
                         android:layout_marginTop="@dimen/dimen_70dp"
                         android:gravity="center_vertical">
 
+
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -93,7 +93,6 @@
                             android:text="昵称"
                             android:textColor="@color/color_333333"
                             android:textSize="16sp" />
-
 
                         <TextView
                             android:id="@+id/tv_info_1"
@@ -121,7 +120,7 @@
                         android:gravity="center_vertical">
 
                         <TextView
-                            android:layout_width="@dimen/dimen_140dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableStart="@drawable/ic_mine_info3"
                             android:drawablePadding="@dimen/dp_10"
@@ -139,8 +138,45 @@
                             android:layout_marginEnd="@dimen/dp_10"
                             android:drawableEnd="@drawable/icon_jiantou_you_99"
                             android:drawablePadding="@dimen/dp_10"
-                            android:padding="@dimen/dp_10"
                             android:gravity="end"
+                            android:padding="@dimen/dp_10"
+                            android:text=""
+                            android:textColor="@color/color_999999"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginHorizontal="@dimen/dp_10"
+                        android:background="#F2F2F2" />
+
+                    <LinearLayout
+                        android:id="@+id/ll_info_jbxx"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableStart="@drawable/ic_mine_info2"
+                            android:drawablePadding="@dimen/dp_10"
+                            android:gravity="center_vertical"
+                            android:padding="@dimen/dimen_15dp"
+                            android:text="基本信息修改(性别/身高/体重)"
+                            android:textColor="@color/color_333333"
+                            android:textSize="16sp" />
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/dp_10"
+                            android:drawableEnd="@drawable/icon_jiantou_you_99"
+                            android:drawablePadding="@dimen/dp_10"
+                            android:gravity="end"
+                            android:padding="@dimen/dp_10"
                             android:text=""
                             android:textColor="@color/color_999999"
                             android:textSize="14sp" />
