--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -178,7 +178,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_below="@id/view3">
 
         <TextView
             android:id="@+id/tv_go_find"
@@ -194,38 +194,12 @@
             android:textColor="@color/color_ffffff"
             android:textSize="16sp" />
 
-        <LinearLayout
-            android:id="@+id/ll_go_dl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_go_find"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/dp_10"
-            android:gravity="center"
-            android:padding="@dimen/dp_10"
-            android:visibility="invisible">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="已有账号 "
-                android:textColor="@color/color_999999"
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" 去登录"
-                android:textColor="@color/color_text_theme"
-                android:textSize="12sp" />
-
-        </LinearLayout>
 
         <ImageView
             android:id="@+id/iv_line"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ll_go_dl"
+            android:layout_below="@id/tv_go_find"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:src="@drawable/icon_splash_2"
@@ -233,45 +207,10 @@
 
 
         <LinearLayout
-            android:id="@+id/ll_share"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_line"
-            android:layout_marginTop="@dimen/dp_10"
-            android:gravity="center"
-            android:visibility="invisible">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_10"
-                android:src="@drawable/icon_login_wx" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_10"
-                android:src="@drawable/icon_login_qq" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_10"
-                android:src="@drawable/icon_login_xl" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_10"
-                android:src="@drawable/icon_login_sf" />
-
-        </LinearLayout>
-
-        <LinearLayout
             android:id="@+id/ll_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ll_share"
+            android:layout_below="@id/iv_line"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/dimen_20dp"
             android:gravity="center"
