--- a/app/src/main/res/layout/item_home_sign_top.xml
+++ b/app/src/main/res/layout/item_home_sign_top.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dimen_2dp"
     android:background="@drawable/jb_shape_theme_top_1"
@@ -9,9 +9,9 @@
 
     <TextView
         android:id="@+id/tv"
-        android:layout_width="@dimen/dimen_30dp"
-        android:layout_height="@dimen/dimen_30dp"
-        android:layout_marginHorizontal="@dimen/dp_10"
+        android:layout_width="@dimen/dimen_25dp"
+        android:layout_height="@dimen/dimen_25dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/dp_10"
         android:background="@drawable/bj_circle_btm"
         android:gravity="center"
