--- a/app/src/main/res/drawable/shap_f8f8f8_fffff_15.xml
+++ b/app/src/main/res/drawable/shap_f8f8f8_fffff_15.xml
@@ -2,10 +2,10 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape = "rectangle">
-    <stroke android:color="#000"
+    <stroke android:color="@color/color_eeeeee"
         android:width="1dp"/>
     <solid android:color="#ffffff"/>
-    <corners android:radius="15dp"></corners>
+    <corners android:radius="15dp"/>
 
 
 
