--- a/app/src/main/res/layout/activity_search_goods.xml
+++ b/app/src/main/res/layout/activity_search_goods.xml
@@ -17,11 +17,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="15dp"
-                android:background="#fff" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
@@ -29,17 +24,24 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/img_top_back"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="9dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="9dp"
-                    android:src="@drawable/icon_back_h" />
+                <LinearLayout
+                    android:id="@+id/ll_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_10">
+
+                    <ImageView
+                        android:id="@+id/iv_back"
+                        android:layout_width="@dimen/dimen_25dp"
+                        android:layout_height="@dimen/dimen_25dp"
+                        android:layout_gravity="center"
+                        android:background="@null"
+                        android:paddingLeft="@dimen/dimen_2dp"
+                        android:paddingRight="@dimen/dimen_2dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/icon_back_h" />
+                </LinearLayout>
+
 
                 <EditText
                     android:id="@+id/tv_top_title"
@@ -58,7 +60,6 @@
                     android:imeOptions="actionSearch"
                     android:maxLength="15"
                     android:maxLines="1"
-                    android:paddingLeft="13dp"
                     android:singleLine="true"
                     android:textColor="#333333"
                     android:textColorHint="#666666"
@@ -112,10 +113,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
-        android:visibility="gone"
         android:background="@color/color_ffffff"
         android:orientation="vertical"
-        android:padding="@dimen/dp_10">
+        android:padding="@dimen/dp_10"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
