--- a/app/src/main/res/layout/activity_search_goods_result.xml
+++ b/app/src/main/res/layout/activity_search_goods_result.xml
@@ -17,34 +17,33 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="15dp"
-                android:background="#fff" />
-
             <LinearLayout
-
-
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:background="#fff"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/img_top_back"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="5dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="5dp"
-                    android:src="@drawable/icon_back_h" />
+                <LinearLayout
+                    android:id="@+id/ll_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_10">
 
-                <TextView
+                    <ImageView
+                        android:id="@+id/iv_back"
+                        android:layout_width="@dimen/dimen_25dp"
+                        android:layout_height="@dimen/dimen_25dp"
+                        android:layout_gravity="center"
+                        android:background="@null"
+                        android:paddingLeft="@dimen/dimen_2dp"
+                        android:paddingRight="@dimen/dimen_2dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/icon_back_h" />
+                </LinearLayout>
 
+
+                <EditText
                     android:id="@+id/tv_top_title"
                     android:layout_width="match_parent"
                     android:layout_height="33dp"
@@ -57,11 +56,10 @@
                     android:drawablePadding="5dp"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
-                    android:hint="输入商品名称"
+                    android:hint="输入搜索内容"
                     android:imeOptions="actionSearch"
                     android:maxLength="15"
                     android:maxLines="1"
-                    android:paddingLeft="13dp"
                     android:singleLine="true"
                     android:textColor="#333333"
                     android:textColorHint="#666666"
