--- a/app/src/main/res/layout/item_two_jlxq.xml
+++ b/app/src/main/res/layout/item_two_jlxq.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="85dp"
-    android:layout_margin="@dimen/dp_10"
+    android:layout_height="@dimen/dimen_75dp"
+    android:layout_marginHorizontal="@dimen/dimen_5dp"
+    android:layout_marginTop="@dimen/dimen_5dp"
     android:background="@drawable/ic_shade_img"
     android:gravity="center_vertical"
     android:orientation="horizontal">
@@ -11,14 +12,14 @@
         android:id="@+id/iv_imgUrl"
         android:layout_width="47dp"
         android:layout_height="47dp"
-        android:layout_marginStart="@dimen/dp_10"
+        android:layout_marginStart="@dimen/dimen_5dp"
         android:src="@mipmap/ic_2" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_5dp"
-        android:layout_weight="1"
+        android:layout_weight="1.6"
         android:orientation="vertical">
 
         <TextView
@@ -33,7 +34,9 @@
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dimen_5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="05-11 15:30"
             android:textColor="@color/color_999999"
             android:textSize="10sp" />
@@ -59,7 +62,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dimen_5dp"
             android:text="里程/km"
             android:textColor="@color/color_999999"
             android:textSize="10sp" />
@@ -85,7 +88,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dimen_5dp"
             android:text="卡路里/cal"
             android:textColor="@color/color_999999"
             android:textSize="10sp" />
@@ -111,7 +114,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dimen_5dp"
             android:text="时长"
             android:textColor="@color/color_999999"
             android:textSize="10sp" />
