--- a/app/src/main/res/layout/dialog_you_hui_quan.xml
+++ b/app/src/main/res/layout/dialog_you_hui_quan.xml
@@ -49,7 +49,7 @@
             android:layout_marginTop="-20dp"
             android:background="@drawable/bnt_jb_youhuiq"
             android:gravity="center"
-            android:text="立即领取"
+            android:text="全部领取"
             android:textColor="@color/color_ffffff"
             android:textSize="@dimen/sp_14" />
 
