--- a/app/src/main/res/layout/item_shopping_rm.xml
+++ b/app/src/main/res/layout/item_shopping_rm.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="138dp"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_10"
+    android:layout_marginVertical="@dimen/dp_10"
+    android:layout_marginStart="@dimen/dp_10"
     android:background="@drawable/shape_yy_ff_all_6"
     android:orientation="vertical">
 
