--- a/app/src/main/res/layout/activity_exercise_record.xml
+++ b/app/src/main/res/layout/activity_exercise_record.xml
@@ -107,7 +107,7 @@
                     android:layout_marginTop="@dimen/dimen_75dp"
                     android:background="@drawable/ic_shade_img">
 
-                    <com.jxkj.fit_5a.AAChartCoreLib.AAChartCreator.AAChartViewOne
+                    <com.jxkj.fit_5a.AAChartCoreLib.AAChartCreator.AAChartView
                         android:id="@+id/AAChartView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
