--- a/app/src/main/res/layout/rza.xml
+++ b/app/src/main/res/layout/rza.xml
@@ -8,6 +8,11 @@
         android:id="@+id/line_chart_1"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_300dp"
+
         android:layout_centerVertical="true" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/iv_img"/>
 </RelativeLayout>
