--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#333333</color>
 
     <color name="color_text_theme">#FFB300</color>
+    <color name="color_text_theme1">#80FFB300</color>
 
     <color name="color_transparent">#00000000</color>
     <color name="color_000000">#000000</color>
